# ddtrace-celery-tests

./: .env.base  README.md  docker-compose.yaml  justfile  pyproject.toml  start-nagger.sh  start-worker.sh
src/: base.py  nagger.py  worker.py
